# bioage

./: .gitignore  CHANGELOG.md  CLIENT_MODEL_EXPLANATION.md  CLIENT_ONE_PAGER.md  README.md  RESEARCH_BASIS.md  SPEC.md  pyproject.toml
app/: __init__.py  helptext.py  main.py  validation.py
app/static/css/: style.css
app/static/js/: form.js
app/templates/: _form.html  base.html  charts.html  error.html  index.html  result.html
bioage/: __init__.py  __main__.py  cli.py  constants.yaml  constants_loader.py  explain.py  guards.py  model.py  pipeline.py  schema.py  scoring.py
bioage/report/: __init__.py  charts.py  render.py  viewmodel.py
bioage/report/templates/: _appendix_explained.html  _appendix_lifestyle.html  _cover.html  _section_bioage.html  _section_bmi.html  _section_bp.html  _section_stiffness.html  _toc.html  report.html  styles.css  toc.html
examples/: input.json  input_height_weight.json  input_minimal_bmi.json  input_with_pwv.json
tests/: test_cli.py  test_edge_cases.py  test_explain.py  test_model.py  test_report.py  test_schema.py  test_scoring.py  test_smoke.py  test_web.py
