[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bioage"
version = "0.1.0"
description = "Educational wellness estimation scaffolding for biological age style reporting."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jinja2>=3.1",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"bioage.report" = ["templates/*.html", "templates/*.css"]
