[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bioage"
version = "0.1.0"
description = "Educational wellness estimation scaffolding for biological age style reporting."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "jinja2>=3.1",
  "matplotlib>=3.7",
  "pydantic>=2.6",
  "PyYAML>=6.0",
  "python-multipart>=0.0.9",
  "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"bioage.report" = ["templates/*.html", "templates/*.css"]
